--- a/MyServiceBus.Server/MyServiceBus.Server.csproj
+++ b/MyServiceBus.Server/MyServiceBus.Server.csproj
@@ -10,14 +10,14 @@
         <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.1" />
         <PackageReference Include="BuildBundlerMinifier" Version="3.2.449" />
         <PackageReference Include="DotNetCoreDecorators" Version="1.0.20" />
-        <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.14.0" />
-        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.7" />
-        <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="3.1.7" />
+        <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.15.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.8" />
+        <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="3.1.8" />
         <PackageReference Include="MyDependencies" Version="1.0.1" />
         <PackageReference Include="MyServiceBus.Grpc" Version="1.0.10" />
-        <PackageReference Include="MySettingsReader" Version="1.1.0" />
+        <PackageReference Include="MyYamlParser" Version="1.0.0" />
         <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-        <PackageReference Include="NSwag.AspNetCore" Version="13.7.0" />
+        <PackageReference Include="NSwag.AspNetCore" Version="13.7.4" />
         <PackageReference Include="prometheus-net.AspNetCore" Version="3.6.0" />
         <PackageReference Include="protobuf-net.Grpc" Version="1.0.123" />
         <PackageReference Include="protobuf-net.Grpc.AspNetCore" Version="1.0.123" />
