--- a/MyServiceBus.TcpClient.Tests/MyServiceBus.TcpClient.Tests.csproj
+++ b/MyServiceBus.TcpClient.Tests/MyServiceBus.TcpClient.Tests.csproj
@@ -1,13 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>net5.0</TargetFramework>
-        <LangVersion>9</LangVersion>
+
+        <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\MyServiceBus.Abstractions\MyServiceBus.Abstractions.csproj" />
+        <PackageReference Include="NUnit" Version="3.12.0" />
+        <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+    </ItemGroup>
+
+    <ItemGroup>
       <ProjectReference Include="..\MyServiceBus.TcpClient\MyServiceBus.TcpClient.csproj" />
     </ItemGroup>
 
