--- a/MyServiceBus.Server/MyServiceBus.Server.csproj
+++ b/MyServiceBus.Server/MyServiceBus.Server.csproj
@@ -11,13 +11,13 @@
         <PackageReference Include="BuildBundlerMinifier" Version="3.2.449" />
         <PackageReference Include="DotNetCoreDecorators" Version="1.0.21" />
         <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.17.0" />
-        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.6" />
-        <PackageReference Include="MyServiceBus.Grpc" Version="1.0.12" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.7" />
+        <PackageReference Include="MyServiceBus.GrpcContracts" Version="1.0.4" />
         <PackageReference Include="MySettingsReader" Version="1.2.0" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
         <PackageReference Include="NSwag.AspNetCore" Version="13.11.3" />
         <PackageReference Include="NSwag.Core" Version="13.11.3" />
-        <PackageReference Include="prometheus-net.AspNetCore" Version="4.1.1" />
+        <PackageReference Include="prometheus-net.AspNetCore" Version="4.2.0" />
         <PackageReference Include="protobuf-net.Grpc" Version="1.0.152" />
         <PackageReference Include="protobuf-net.Grpc.AspNetCore" Version="1.0.152" />
         <PackageReference Include="Grpc.Net.Client" Version="2.38.0" />        
