--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,10 @@
-name: Test commit
+name: Test Master commit
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, rc ]
   pull_request:
-    branches: [ master ]
+    branches: [ master rc ]
 
 jobs:
   build:
